<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/setting_notification" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favourite"
            android:title="favourite" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact"
            android:title="Connect with us" />

        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/aboutapp"
            android:title="about App" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="Log Out" />



    </group>



</menu>
