<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:id="@+id/changenumber_fragment_iv"
        android:src="@drawable/logoo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changenumber_fragment_tv"
        app:layout_constraintTop_toBottomOf="@id/changenumber_fragment_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/password_change_code"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/dim_20sp"
        android:textColor="@color/black"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintTop_toBottomOf="@id/changenumber_fragment_tv"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle"
        android:hint="@string/phone"
        android:paddingStart="@dimen/dim_8dp"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:textSize="@dimen/txt_15sp"
        android:id="@+id/changenumber_fragment_et_phone"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40dp"
        app:layout_constraintTop_toBottomOf="@id/changenumber_fragment_et_phone"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle"
        android:hint="@string/new_passowrd"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dim_8dp"
        android:textColorHint="@color/black"
        android:textSize="@dimen/txt_15sp"
        android:id="@+id/changenumber_fragment_et_password"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/changenumber_fragment_et_password"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle"
        android:hint="confirmation password"
        android:inputType="textPassword"
        android:textSize="@dimen/txt_15sp"
        android:textColorHint="@color/black"
        android:paddingStart="@dimen/dim_8dp"
        android:id="@+id/changenumber_fragment_et_confirm_password"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changenumber_fragment_et_confirm_password"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/green"
        android:textSize="20sp"
        android:text="@string/change_passwird"
        android:id="@+id/changenumber_fragment_btn_change_password"
        android:textColor="@color/white"




        />





</android.support.constraint.ConstraintLayout>